# massage

./: CHANGELOG.md  Makefile  README.md  TODO.md
examples/: simple.toml  stress.toml
examples/lua/: main.lua
examples/rust/: Cargo.toml  build.rs
examples/rust/src/: main.rs
examples/ts/: .gitignore  build.ts  package.json  run.ts  tsconfig.json
lua/: .gitignore  _primitives.lua  casing.lua  de.lua  format.lua  generate.lua  init.lua  ser.lua
lua/lib/: SOURCES.md  etlua.lua
lua/tests/: de.lua  init.lua  parsingSchema.lua  roundtrip.lua  ser.lua
rust/: Cargo.toml
rust/crates/test/: Cargo.toml  build.rs
rust/crates/test/src/: de.rs  lib.rs  parsing_schema.rs  roundtrip.rs  ser.rs
rust/src/: _primitives.rs  de.rs  format.rs  generate.rs  lib.rs  ser.rs
test/: schema.toml
ts/: index.ts  package-lock.json  package.json  tsconfig.json
ts/src/: _primitives.ts  de.ts  format.ts  generate.ts  ser.ts
ts/tests/: de.test.ts  parsingSchema.test.ts  roundtrip.test.ts  ser.test.ts  setup.ts
