[package]
name = "massage"
version = "0.1.0"
edition = "2024"

[features]
test = []

[dependencies]
serde = { version = "1.0", features = ["derive"]}
toml = "1.1"
quote = "1.0"
syn = "2.0"
prettyplease = "0.2"
proc-macro2 = "1.0"
heck = "0.5"
thiserror = "2.0"

[workspace]
members = [
  "crates/test"
]
